--- a/DEBIAN/control
+++ b/DEBIAN/control
@@ -1,8 +1,9 @@
-Package: com.r3st1t0u.order66
+Package: com.r3st1t0u.substratefix
 Name: Order66
-Depends: mobilesubstrateVersion: 1.3
+Depends: mobilesubstrate
+Version: 1.1
 Architecture: iphoneos-arm
-Description: Adds the command "execute" in terminal which enables substrate and launches LaunchDaemons that currently aren't launching automatically. This fixes tweaks such as Rocketbootstrap and Anemone. This is for iPhone 7 users on the mach_portal jailbreak.
+Description: Adds the command "execute" in terminal which enables substrate and launches LaunchDaemons that currently aren't launching automatically. This fixes tweaks such as Rocketbootstrap and Anemone. This is for iPhone 7 users on the mach_portal jailbreak. As of version 1.1, this should support other tweaks that usually would need a reinstall. It also no longer reinstalls packages through the script, and it enables them with the tweak’s LaunchDaemon. This version should enable compatibility with all tweaks that rely on /Library/LaunchDaemons/. This version also changes the command used from “fix” to “execute” because quite a few people requested for me not to use fix.
 Maintainer: r3st1t0u (Ben Weaver)
 Author: r3st1t0u (Ben Weaver)
 Section: System
