--- a/DEBIAN/control
+++ b/DEBIAN/control
@@ -1,10 +1,10 @@
 Package: com.r3st1t0u.substratefix
-Name: Substrate Fix for Yalub3
+Name: Substrate Enabler for Yalub3
 Depends: mobilesubstrate, com.ericasadun.utilities
 Conflicts: com.codyqx4.ios9rebootfix
-Version: 2.5
+Version: 2.6
 Architecture: iphoneos-arm
-Description: This package is a better substrate enabler for the Yalub3 jailbreak. Version 2.5 cleans up errors, and removes the now obsolete high command. Run with the command execute or through Executer for Yalub3 on my repo. You may donate at paypal.me/r3st1t0u!
+Description: This package is a better substrate enabler for the Yalub3 jailbreak. Run with the command execute or through Executer for Yalub3 on my repo. You may donate at paypal.me/r3st1t0u!
 Maintainer: r3st1t0u (Ben Weaver)
 Author: r3st1t0u (Ben Weaver)
 Section: System
